--- a/index.html
+++ b/index.html
@@ -1,81 +1,69 @@
 <!doctype html>
 <html class="no-js" lang="">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Generatore Curriculum</title>
   <link rel="stylesheet" href="css/style.css">
   <meta name="description" content="">
-
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-  <meta property="og:image:alt" content="">
-
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" href="/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="icon.png">
+  <!-- ...existing meta... -->
   <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#fafafa">
 </head>
-
-<body>
-  <dati>
-    <h1>
-      Dati Personali
-    </h1>
-    <div>
-      <label for="nome">Nome:</label>
-      <input type="text" id="nome" name="nome">
-      <label for="cognome">Cognome:</label>
-      <input type="text" id="cognome" name="cognome">
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email">
-      <label for="telefono">Telefono:</label>
-      <input type="tel" id="telefono" name="telefono">
-      <label for="indirizzo">Indirizzo:</label>
-      <input type="text" name="indirizzo" id="indirizzo">
-      <label for="citta">Città:</label>
-      <input type="text" name="citta" id="citta">
-    </div>
-  </dati>
-  <titoli>
-    <h1>
-      Titoli Culturali
-    </h1>
-    <button onclick="aggiungi('titoli')">Aggiungi Titolo</button>
-    <div id="titoli">
-      <opzione id="opzione0">
-      <label for="titolo">Titolo:</label>
-      <input type="text" id="titolo" name="titolo">
-      <label for="scuola">Scuola:</label>
-      <input type="text" id="scuola" name="scuola">
-        <button onclick="rimuovi('opzione0')">Rimuovi</button>
-      </opzione>
-    </div>
-  </titoli>
-  <esperienze>
-    <h1>
-      Esperienze Lavorative
-    </h1>
-    <button onclick="aggiungi('esperienze')">Aggiungi Esperienza</button>
-    <div id="esperienze">
-      <opzione id="opzione1">
-      <label for="azienda">Azienda:</label>
-      <input type="text" id="azienda" name="azienda">
-      <label for="dal">Dal:</label>
-      <input type="text" id="dal" name="dal">
-      <label for="al">Al:</label>
-      <input type="text" id="al" name="al">
-        <button onclick="rimuovi('opzione1')">Rimuovi</button>
-      </opzione>
-    </div>
+<body onload="init()">
+  <form action="http://192.168.112.2/4id/index.php" method="post">
+    <!-- dati personali -->
+    <dati>
+      <h1>Dati Personali</h1>
+      <div>
+        <label for="nome">Nome:</label>
+        <input type="text" id="nome" name="nome">
+        <label for="cognome">Cognome:</label>
+        <input type="text" id="cognome" name="cognome">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email">
+        <label for="telefono">Telefono:</label>
+        <input type="tel" id="telefono" name="telefono">
+        <label for="indirizzo">Indirizzo:</label>
+        <input type="text" id="indirizzo" name="indirizzo">
+        <label for="citta">Città:</label>
+        <input type="text" id="citta" name="citta">
+      </div>
+    </dati>
+    <!-- titoli -->
+    <titoli>
+      <h1>Titoli Culturali</h1>
+      <button type="button" onclick="aggiungi('titoli')">Aggiungi Titolo</button>
+      <div id="titoli">
+        <div class="opzione" id="opzione0">
+          <label for="titolo">Titolo:</label>
+          <input type="text" id="titolo" name="titolo">
+          <label for="scuola">Scuola:</label>
+          <input type="text" id="scuola" name="scuola">
+          <button type="button" onclick="rimuovi('opzione0')">Rimuovi</button>
+        </div>
+      </div>
+    </titoli>
+    <!-- esperienze -->
+    <esperienze>
+      <h1>Esperienze Lavorative</h1>
+      <button type="button" onclick="aggiungi('esperienze')">Aggiungi Esperienza</button>
+      <div id="esperienze">
+        <div class="opzione" id="opzione1">
+          <label for="azienda">Azienda:</label>
+          <input type="text" id="azienda" name="azienda">
+          <label for="dal">Dal:</label>
+          <input type="text" id="dal" name="dal">
+          <label for="al">Al:</label>
+          <input type="text" id="al" name="al">
+          <button type="button" onclick="rimuovi('opzione1')">Rimuovi</button>
+        </div>
+      </div>
     </esperienze>
-  <button onclick="stampa()">Stampa PDF</button>
+    <!-- pulsante di submit -->
+    <button type="submit">Invia</button>
+  </form>
   <script src="node_modules/html2pdf.js/dist/html2pdf.bundle.min.js"></script>
   <script src="js/app.js"></script>
 </body>
-
 </html>
